metadatafullcopy/unpackaged/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Job Opportunity</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Job Sales Process</fullName>
        <description>Job Sales Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Billing Complete</fullName>
        </values>
        <values>
            <fullName>Estimating%2FReview</fullName>
        </values>
        <values>
            <fullName>Lost</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
        <values>
            <fullName>Won</fullName>
        </values>
        <values>
            <fullName>Work Complete</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>New Job Sales Process</fullName>
        <description>Upon initial new job intake prior to approval</description>
        <isActive>true</isActive>
        <values>
            <fullName>Lost</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>AE_1_Bonus__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AE 1 Bonus</label>
        <referenceTo>AE_Bonus__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AE_1_percentage__c</fullName>
        <description>This percentage field is populated via Process Builder &apos;Opportunity Split percentage population&apos; flow to note what revenue percentage is allotted to the Account Executive 1 user.  Only Account Executives with a percentage value over 0 will be sent to Timberline.</description>
        <label>AE 1 percentage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AE_2_Bonus__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AE 2 Bonus</label>
        <referenceTo>AE_Bonus__c</referenceTo>
        <relationshipLabel>Jobs (AE 2 Bonus)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AE_2_percentage__c</fullName>
        <description>This percentage field is populated via Process Builder &apos;Opportunity Split percentage population&apos; flow to note what revenue percentage is allotted to the Account Executive 2 user.  Only Account Executives with a percentage value over 0 will be sent to Timberline.</description>
        <label>AE 2 percentage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AE_Base_Name2__c</fullName>
        <formula>IF(AND(Account_Executive_1__c != &apos;&apos;, Account_Executive_2__c = &apos;&apos;),Account_Executive_1__r.FirstName &amp; &apos; &apos; &amp; Account_Executive_1__r.LastName,IF(AND(Account_Executive_1__c != &apos;&apos;, Account_Executive_2__c != &apos;&apos;),Account_Executive_2__r.FirstName &amp; &apos; &apos; &amp; Account_Executive_2__r.LastName, Account_Executive_1__r.FirstName &amp; &apos; &apos; &amp; Account_Executive_1__r.LastName))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AE Base Name2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AE_Logic__c</fullName>
        <description>Used in Jitterbit mapping to send to Timberline.</description>
        <formula>if( Account_Executive_1__r.Id = $User.Id, 1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ATI_Phone_Number__c</fullName>
        <defaultValue>&quot;(714)283-9990&quot;</defaultValue>
        <label>ATI Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Account_Executive_1_Timber__c</fullName>
        <description>Field used in Jitterbit mapping to sync with Timberline to indicate the primary Account Executive related to the Job.</description>
        <formula>if(!ISBLANK(Account_Executive_1__r.LastName), Account_Executive_1__r.LastName &amp; if(!ISBLANK(Account_Executive_1__r.FirstName ), &quot;, &quot; &amp; Account_Executive_1__r.FirstName,&quot;&quot; ) ,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Executive 1 Timber</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Executive_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field populated by trigger from the Opportunity&apos;s associated Contact record&apos;s Owner lookup field to indicate the Account Executive involved in the Opportunity. The purpose of this field is to allow for this value to be sent to Timberline easily without having to integrate with &apos;Opportunity Team&apos; separate object.</description>
        <label>Account Executive 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OpportunitiesAE1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Executive_2_Timber__c</fullName>
        <description>Field used in Jitterbit mapping to sync with Timberline to indicate the secondary Account Executive related to the Job.</description>
        <formula>if(!ISBLANK(Account_Executive_2__r.LastName), Account_Executive_2__r.LastName &amp; if(!ISBLANK(Account_Executive_2__r.FirstName ), &quot;, &quot; &amp; Account_Executive_2__r.FirstName,&quot;&quot; ) ,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Executive 2 Timber</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Executive_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field populated by trigger from the Opportunity&apos;s associated Account record&apos;s Owner lookup field to indicate the secondary Account Executive involved in the Opportunity. The purpose of this field is to allow for this value to be sent to Timberline easily without having to integrate with &apos;Opportunity Team&apos; separate object.</description>
        <label>Account Executive 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OpportunitiesAE2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Owner_s_Profile__c</fullName>
        <description>This field is a work-around until Process Builder fixes issues with referencing an associated record owner&apos;s Profile Name in criteria. Please adjust &apos;AE_1_and_AE_2_population&apos; Process Builder flows once this issue is fixed and delete this field</description>
        <formula>Account.Owner.Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner&apos;s Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Status__c</fullName>
        <description>This field is used in approval request for Job. If new account is not approved, cannot submit for lead approval.</description>
        <formula>TEXT( Account.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Gross_Profit_JTD_NM__c</fullName>
        <description>Percentage gross profit- job-to-date next month</description>
        <formula>IF (ABS(Job_to_Date_Work_Billed_Next_Month__c) &gt;0,((Job_to_Date_Work_Billed_Next_Month__c - Job_to_Date_Costs_Next_Month_Costs__c)  / ABS(Job_to_Date_Work_Billed_Next_Month__c)),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Gross Profit % (JTD-NM)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Actual_Job_Completion_Date__c</fullName>
        <description>Program field</description>
        <inlineHelpText>Update XACT</inlineHelpText>
        <label>Actual Job Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Start_Date__c</fullName>
        <description>for managed repair programs</description>
        <inlineHelpText>Update XACT</inlineHelpText>
        <label>Actual Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Add_Correct_Email__c</fullName>
        <description>This field allows users to add or change an email address on the related Contact record from the Opportunity record.  This field is referenced by &apos;EmailUpdateOnJob&apos; trigger.</description>
        <label>Add/Correct Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Amount_not_billed__c</fullName>
        <formula>Amount -  Job_to_Date_Work_Billed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount not billed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approved_By__c</fullName>
        <description>Indicator of the Admin Manager that approved the Job-- populated via &apos;Job Approval Process&apos; Final Approval Action Field Update.</description>
        <label>Approved By</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approved_Date__c</fullName>
        <description>Date that Insurance approved estimate for repair.  Managed Repair Program Admin to update.</description>
        <label>Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Average_Time_to_Close__c</fullName>
        <description>Average time it takes to complete an opportunity/job-- Complete Date minus Job Start Date</description>
        <formula>Completion_Date__c  - DATEVALUE(Job_Start_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days to Complete Job</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Avg_del__c</fullName>
        <formula>( Job_to_Date_Work_Billed__c - Job_to_Date_Costs__c )/ 00N0g000003wHXe</formula>
        <label>Avg</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Branch_Manager_Email_Recipient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Email recipient populated via Process Builder from Office record to indicate additional email recipients of the PM assignment email</description>
        <label>Branch Manager Email Recipient</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Branch_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look up field to note the Branch Manager that will need to assign a PM to the job.</description>
        <label>Regional Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Budget_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicator to note when a Superintendent has completed a budget form related to the job.</description>
        <label>Budget Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Building_Consultant__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicate if a building consultant is involved in this job. This will alert all the job assignee.</inlineHelpText>
        <label>Building Consultant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Developement_Manager__c</fullName>
        <description>This field is used for reporting on BDM.</description>
        <formula>IF(NOT(ISBLANK(Account_Executive_1__c)), Account_Executive_1__r.FirstName +&quot; &quot;+  Account_Executive_1__r.LastName,&quot;&quot;)+BR() +

IF(NOT(ISBLANK(Account_Executive_2__c)), Account_Executive_2__r.FirstName +&quot; &quot;+  Account_Executive_2__r.LastName, &quot;&quot;)</formula>
        <label>Business Development Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Called_in_By__c</fullName>
        <description>Indicator of the contact name of the person that initially called in the Job</description>
        <label>Called in By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cell_Phone__c</fullName>
        <description>Project Site Contact&apos;s cell phone from Contact record</description>
        <formula>Project_Site_Contact_Name__r.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cell Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_of_LA_Timber__c</fullName>
        <description>Code to indicate Yes/No of referenced &apos;City of LA&apos; picklist, used in Jitterbit mapping to send on to Timberline.</description>
        <formula>if( ISPICKVAL(City_of_LA__c , &apos;Yes&apos;) ,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City of LA Timber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>City_of_LA__c</fullName>
        <description>Indicator of whether a Job is located in the city of LA.  Required in New Job VF page.</description>
        <label>City of LA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Claim__c</fullName>
        <description>Field to indicate claim number for jobs that will be covered by insurance.</description>
        <label>Claim #</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collector__c</fullName>
        <description>Collector from Project Managers User record</description>
        <formula>Project_Manager__r.Collector__r.FirstName &amp; &quot; &quot; &amp; Project_Manager__r.Collector__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Collector</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>After Hour Lead Entry comment</description>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <description>This is ATI company name for use in the Prelim Report.</description>
        <formula>$User.CompanyName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Compare_Last_5__c</fullName>
        <formula>IF( Job_Number_Last_5__c = Job_Number_No_Dash_Last_5__c , 0, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Compare Last 5</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Competitors__c</fullName>
        <label>Competitors</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Belfor</fullName>
                </value>
                <value>
                    <fullName>Blue Sky Restoration</fullName>
                </value>
                <value>
                    <fullName>BMS Cat</fullName>
                </value>
                <value>
                    <fullName>Coit</fullName>
                </value>
                <value>
                    <fullName>Cotton</fullName>
                </value>
                <value>
                    <fullName>DKI</fullName>
                </value>
                <value>
                    <fullName>Northstar</fullName>
                </value>
                <value>
                    <fullName>Polygon</fullName>
                </value>
                <value>
                    <fullName>Harbro</fullName>
                </value>
                <value>
                    <fullName>Interstate Restoration</fullName>
                </value>
                <value>
                    <fullName>Miller</fullName>
                </value>
                <value>
                    <fullName>Serv-Pro</fullName>
                </value>
                <value>
                    <fullName>Service Master</fullName>
                </value>
                <value>
                    <fullName>Paul Davis Systems</fullName>
                </value>
                <value>
                    <fullName>PW Stevens</fullName>
                </value>
                <value>
                    <fullName>Puroclean</fullName>
                </value>
                <value>
                    <fullName>NCRI-National Catastrophe Restoration</fullName>
                </value>
                <value>
                    <fullName>Rainbow International</fullName>
                </value>
                <value>
                    <fullName>RMC Group, LLC</fullName>
                </value>
                <value>
                    <fullName>Steamatic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Completion_Date__c</fullName>
        <description>Date that the Job&apos;s Stage is set to Complete</description>
        <label>Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Completion_minus_Estimate_Date__c</fullName>
        <description>Completion Date minus Date Taken</description>
        <formula>Completion_Date__c  -  Date_Taken__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Completion - Created Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ConcurConnect__AccruedUnApprovedExpenseTotal__c</fullName>
        <label>Accruing/Unpaid Expense Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ConcurConnect__AccruedUnApprovedExpenses__c</fullName>
        <formula>IF(AND(ConcurConnect__AccruedUnApprovedExpenseTotal__c &gt; 0, Amount &gt; 0), (ConcurConnect__AccruedUnApprovedExpenseTotal__c / Amount), null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Accruing/Unpaid Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ConcurConnect__FinalExpenseTotal__c</fullName>
        <label>Final/Paid Expense Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ConcurConnect__FinalExpense__c</fullName>
        <formula>IF(AND(ConcurConnect__FinalExpenseTotal__c &gt; 0, Amount &gt; 0), (ConcurConnect__FinalExpenseTotal__c / Amount), null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final/Paid Expenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CongaWorkflow_TestClientLetter__c</fullName>
        <description>##Conga created btn:00b70000001J1uc</description>
        <formula>&quot;&amp;id=&quot; + Id +
&quot;&amp;emailtoid=&quot; + Project_Site_Contact_Name__c +
&quot;&amp;emailadditionalto=&quot; + 
&quot;&amp;emailfromid=0D270000000L1Gd&quot; + 
&quot;&amp;congaemailtemplateid=a2W70000001v9Da&quot; + 
&quot;&amp;qmode=SendEmail&quot;</formula>
        <label>CongaWorkflow_TestClientLetter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consultant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup an user who is consulting the job. Filtered to only show consultant.</description>
        <label>Consultant</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Jobs2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Consulting_Division_Referral__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Gives credit to consulting division for referral</description>
        <label>Consulting Division Referral</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cont_P_O_Client_Job__c</fullName>
        <label>Cont. P.O./ Client Job #</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Information__c</fullName>
        <formula>IF(ISBLANK(Contact__c)=true, &quot;&quot;, 

if(Contact__r.IsPersonAccount = true, (Contact__r.Account.BillingStreet +&quot;, &quot;+  Contact__r.Account.BillingCity +&quot;, &quot;+ Contact__r.Account.BillingState +&quot; &quot;+ Contact__r.Account.BillingPostalCode &amp; BR() &amp;
Contact__r.Account.Phone +&quot; Work &quot; &amp; BR() &amp;   Contact__r.MobilePhone +&quot; Mobile &quot; &amp; BR() &amp;
Contact__r.Email),
(Contact__r.MailingStreet +&quot;, &quot;+ Contact__r.MailingCity +&quot;, &quot;+ Contact__r.MailingState +&quot; &quot;+ Contact__r.MailingPostalCode &amp; BR() &amp;
Contact__r.Phone +&quot; Work &quot; &amp; BR() &amp;  Contact__r.MobilePhone +&quot; Mobile &quot; &amp; BR() &amp;
Contact__r.Email)))</formula>
        <inlineHelpText>Information is carried over from Contact&apos;s Mailing Address.</inlineHelpText>
        <label>Contact Information</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Owner_s_Profile__c</fullName>
        <description>This field is a work-around until Process Builder fixes issues with referencing an associated record owner&apos;s Profile Name in criteria. Please adjust &apos;AE_1_and_AE_2_population&apos; Process Builder flows once this issue is fixed and delete this field</description>
        <formula>Contact__r.Owner.Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Owner&apos;s Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field to link the primary Contact of the Job to the Opportunity</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Jobs (Contact)</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CopyPMToOwner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CopyPMToOwner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cost_Code__c</fullName>
        <defaultValue>&quot;1000&quot;</defaultValue>
        <description>Field to indicate Cost Code-- default to 1000</description>
        <label>Cost Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <description>Job Project Site County-- used in Jitterbit mapping to sync with Timberline.</description>
        <label>County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Request_Status__c</fullName>
        <description>Status set in Credit Request Approval Process</description>
        <label>Credit Request Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unapproved</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credit_Request_Submitter_Email__c</fullName>
        <description>Credit Request submitter email population</description>
        <label>Credit Request Submitter Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Customer_Contacted__c</fullName>
        <description>Date when PD makes the first contact with the Customer.  Managed Repair Program Admin to enter.</description>
        <inlineHelpText>Update XACT</inlineHelpText>
        <label>Customer Contacted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Customer)</relationshipLabel>
        <relationshipName>Opportunities_Customer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DB_Competitor__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and can delete this field.</description>
        <label>DB Competitor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Competitor A</fullName>
                </value>
                <value>
                    <fullName>Competitor B</fullName>
                </value>
                <value>
                    <fullName>Competitor C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_24_HR_Report_Uploaded__c</fullName>
        <description>Program field</description>
        <label>Date 24-HR Report Uploaded</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_COS_Uploaded__c</fullName>
        <label>Date COS Uploaded</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Drying_Doc_Uploaded__c</fullName>
        <label>Date Drying Doc Uploaded</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Final_Photos_Uploaded__c</fullName>
        <description>used for managed repair programs</description>
        <label>Date Final Photos Uploaded</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Initial_Photos_Uploaded__c</fullName>
        <label>Date Initial Photos Uploaded</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Taken__c</fullName>
        <description>Formula field referencing &apos;Date &amp; Time Taken&apos; field to display only the date, not time.</description>
        <formula>DATEVALUE( Date_Time_Taken__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Taken</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Time_Approved__c</fullName>
        <description>Field to indicate the date and time that a job was approved by an admin manager-- populated via &apos;Job Approval Process&apos; Final Approval Action Field Update.</description>
        <label>Date/Time Approved</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Client_Welcome_Email_Sent__c</fullName>
        <label>Date/Time Client Welcome Email Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Submitted_for_Approval__c</fullName>
        <description>Field to indicate the date and time that an admin submits a job to an admin manager for approval.  Field populated by the &apos;Job Approval Process&apos; Initial Submission Actions Field Update.</description>
        <label>Date/Time Submitted for Approval</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Taken__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <description>Field to indicate the date and time the job was taken</description>
        <label>Date &amp; Time Taken</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Work_Auth_Uploaded__c</fullName>
        <description>for managed repair program</description>
        <label>Date Work Auth Uploaded</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Last_Stage_Change_To_From_Won__c</fullName>
        <description>Field populate by &apos;Record Date/Time of Status Change&apos; to indicate the date/time Stage change to/from &apos;Won&apos;</description>
        <label>Date of Last Stage Change (To/From Won)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_of_Last_WFR_Update__c</fullName>
        <label>Date of Last WFR Update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_of_Loss__c</fullName>
        <description>Field to indicate date of loss</description>
        <label>Date of Loss</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deductible__c</fullName>
        <description>Field to note the deductible amount.</description>
        <label>Deductible</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Description_of_Loss__c</fullName>
        <description>This field is automatically populated by a workflow rule and is used only for list-view display purposes instead of the standard Description field.</description>
        <label>Description of Loss</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <description>Field to note what major division/service type the job is related to.</description>
        <label>Division</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Asbestos</fullName>
                </value>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>Demolition</fullName>
                </value>
                <value>
                    <fullName>Emergency Svces</fullName>
                </value>
                <value>
                    <fullName>Contents</fullName>
                </value>
                <value>
                    <fullName>Microbial</fullName>
                </value>
                <value>
                    <fullName>Biohazard</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Catastrophes</fullName>
                </value>
                <value>
                    <fullName>Consulting</fullName>
                </value>
                <value>
                    <fullName>Technical Svces</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ECONZ_Error_Message__c</fullName>
        <label>ECONZ Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECONZ_Integration_Error__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ECONZ Integration Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ECONZ_Last_Callout_Time__c</fullName>
        <label>ECONZ Last Succcessful Callout Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ECONZ_Task_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ECONZ Task Created?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ERA__c</fullName>
        <formula>Account.ERA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ERA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ES_Job_Type__c</fullName>
        <description>This field is to further clarify the type of ES job.</description>
        <label>ES Job Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Board-Up</fullName>
                </value>
                <value>
                    <fullName>Roof Tarp</fullName>
                </value>
                <value>
                    <fullName>Water Mitigation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Econz_Manual_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Econz Manual Sync</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>